--- a/styles/utilities/_colors.scss
+++ b/styles/utilities/_colors.scss
@@ -1,4 +1,4 @@
-$rhddx-color-red: #ee0000 !default;
+$rhddx-color-red: #e00 !default;
 $rhddx-color-red-dark: #c00;
 $rhddx-color-black-900: #151515 !default;
 $rhddx-color-black-850: #2a3035 !default;
